--- a/next-auth/project/package.json
+++ b/next-auth/project/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.4",
+    "@vercel/postgres": "^0.8.0",
+    "bcrypt": "^5.1.1",
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.20",
     "react": "^18",
@@ -17,6 +19,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
